PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-Test-4_5-117_division_invalide1/gcc-compile.txt
input.c:3:13: error: expected ';' after return statement
    return 2//1;
            ^
            ;
1 error generated.

return code: 1
